<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_header">

        <EditTextPreference
            android:selectAllOnFocus="true"
            app:defaultValue="15"
            app:iconSpaceReserved="false"
            app:key="connection_history_entries_amount"
            app:singleLine="true"
            app:title="@string/connection_history_entries_amount_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/touchpad_layout_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="flip_touchpad_buttons"
            app:summaryOff="@string/flip_touchpad_buttons_summary_off"
            app:summaryOn="@string/flip_touchpad_buttons_summary_on"
            app:title="@string/flip_touchpad_buttons_title" />

    </PreferenceCategory>

</PreferenceScreen>